--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -55,15 +55,16 @@
   \scriptsize
   \sffamily
   \vspace{0.3cm}
+	\begin{center}
   \begin{tabular}{l|l|l|l|l|l|l}
   \hline
-  \textbf{c. type} & \textbf{context concept} & \textbf{left p. list} & \textbf{right p. list} & \textbf{concepts} & \textbf{c. element} & \textbf{c. value} \\
+  \textbf{c. type} & \textbf{context class} & \textbf{left p. list} & \textbf{right p. list} & \textbf{classes} & \textbf{c. element} & \textbf{c. value} \\
   \hline
 
 }{
   \hline
   \end{tabular}
-  \linebreak
+	\end{center}
 }
 
 \newenvironment{DL}{
@@ -300,6 +301,13 @@ Benefits:
 	in order to be able to automatically validate the new DSCL constraints
 \end{itemize}
 
+\begin{itemize}
+	\item relationship to requirement
+	\item interoperability between constraint languages
+  \item express constraint in CL A and translate constraint in CL B
+  \item provide SPARQL validation (SPIN mapping) for each general C 
+\end{itemize}
+
 \section{Ideas}
 
 idea:
@@ -349,29 +357,46 @@ constraints may be composed
 
 \section{An Ontology Describing Constraint Languages} 
 
-fig:generic constraint language ontology.  
+We developed an ontology to describe any constraint language.
+We distinguish between two sub-types of \ms{constraint}: 
+\begin{itemize}
+	\item \ms{property constraints} and 
+	\item \ms{class constraints}. 
+\end{itemize}
+
+For both property and class constraints a context class, a list of classes, the constraining element, and the constraining value can be stated
+(see figure \ref{fig:generic-constraint-language-ontology}). Lists of left and right properties can only be stated for property constraints.
+
 \begin{figure}
 	\centering
-		\includegraphics[width=1.00\textwidth]{generic constraint language ontology/generic constraint language ontology.png}
+		\includegraphics[width=0.80\textwidth]{images/generic-constraint-language-ontology.png}
 	\caption{generic constraint language ontology}
-	\label{fig:generic constraint language ontology}
+	\label{fig:generic-constraint-language-ontology}
 \end{figure}
 
-terminology:
-\begin{itemize}
-	\item A "constraint" is an actual constraint, like dcterms:creator :hasMinCardinality "1" .
-  \item a "constraint language" like DSP is used to formulate constraints.
-  \item a constraint language consists of "constraint elements" like :hasMinCardinality (this is probably the most controverse definition).
-	\item class constraint: constraint on context class
-\end{itemize}
-
-\begin{itemize}
-	\item relationship to requirement
-  \item ontology describing constraint languages
-	\item interoperability between constraint languages
-  \item express constraint in CL A and translate constraint in CL B
-  \item provide SPARQL validation (SPIN mapping) for each general C 
-\end{itemize}
+In order to define this ontology, it is needed to define the terminology for the formulation of constraints. 
+A \ms{constraint language} is a language which is used to formulate constraints.
+The W3C Data Shapes WG defines \ms{constraint} as a component of a schema what needs to be satisfied\footnote{\url{https://www.w3.org/2014/data-shapes/wiki/Glossary}}.
+A constraint holds for all individuals of a context class (\ms{contextClass}).
+Consider, e.g., the following cardinality restriction on the property \ms{commandsVessel}, which restricts that a captain must command at least one vessel: 
+\begin{DL}
+$Captain \sqsubseteq \geq1 commandsVessel . Vessel $
+\end{DL}
+Mapped to the GCLO the cardinality restriction is classified as a property constraint which holds for individuals of the class \ms{Captain} - the context class:
+\begin{gcotable}
+property & Captain & commandsVessel & - & Vessel & $\geq$ & 1 \\
+\end{gcotable}
+The constraining element (\ms{constrainingElement}) is the operator indicating the actual type of constraint like DL concept and role constructors, (in)equality, and further keywords for constrains which cannot be expressed in DL (e.g. regular expressions, constraining facets).
+In some cases, a constraint is only complete when in addition to the constraining element a constraining value (\ms{constrainingValue}) is stated.
+The cardinality restriction 
+\begin{DL}
+$\geq$1 commandsVessel . Vessel
+\end{DL}
+constructs an anonymous class of all individuals who command at least one vessel.
+Thus, the constraining element of this property constraint is the DL at-least restriction \ms{$\geq$} and the constraining value is \ms{1}.
+\ms{Classes} indicate the list of classes constraints refer to.
+In case of the property constraint above, the qualified cardinality restriction refers to the class \ms{Vessel}, 
+i.e., restricting the objects, the property \ms{commandsVessel} point to, to be of the class \ms{Vessel}.
 
 \section{Complex Constraints}
 
@@ -405,15 +430,45 @@ of DLs that we have already introduced.
 	\item Exact Qualified Cardinality Restrictions on Properties
 \end{itemize}
 
-\section{Not Expressible in DL}
+\section{Constraints Not Expressible in DL}
 
-\begin{itemize}
-	\item Literal Pattern Matching
-	\item Literal Value Comparison
-	\item Literal Ranges
-	\item Default Values
-	\item language tag cardinality
-\end{itemize}
+There are constraints which cannot be expressed by DL such as literal pattern matching, literal value comparison, literal ranges, default values, and language tag cardinality \cite{BoschNolleAcarEckert2015}.
+
+% maybe additional constraint default values:
+% ear shape of races, e.g. vulcans / teeth color
+
+There are multiple use cases associated with the requirement to match literals according to given patterns (\ms{Literal Pattern Matching} constraint).
+The enterprise vessel, e.g.,  can only have the registry numbers "NCC-1701", "NCC-1701-A", "NCC-1701-B", "NCC-1701-C", "NCC-1701-D", or "NCC-1701-E".
+The universal restriction part of this complex constraint can be expressed by OWL 2 DL:
+\ms{Enterprise $\sqsubseteq$ $\forall$ registryNumber.RegistryNumber}.
+The restriction of the datatype \ms{RegistryNumber}, however, cannot be expressed in DL, but OWL 2 DL can be used anyway to express the literal pattern matching constraint:
+
+\begin{ex}
+RegistryNumber
+    a rdfs:Datatype ;
+    owl:equivalentClass [
+        a rdfs:Datatype ;
+        owl:onDatatype xsd:string ;
+        owl:withRestrictions ( 
+            [ xsd:pattern "NCC-1701([-][A-E])?" ] ) ] .
+\end{ex}
+
+The second axiom defines \ms{RegistryNumber} as an abbreviation for a datatype restriction on \ms{xsd:string}. 
+The first axiom explicitly declares \ms{RegistryNumber} to be a datatype. 
+The datatype \ms{RegistryNumber} can be used just like any other datatype like in the universal restriction above.
+The literal pattern matching constraint validates \ms{RegistryNumber} literals according to the stated regular expression causing a constraint violation for the triples 
+\ms{Janeway commandsEnterprise Voyager} and \ms{Voyager registryNumber "NCC-74656"\textasciicircum{}\textasciicircum{}RegistryNumber}, 
+but not for the triples \ms{Picard commandsEnterprise Enterprise} and \ms{Enterprise registryNumber "NCC-1701-E"\textasciicircum{}\textasciicircum{}RegistryNumber}.
+The universal restriction and the literal pattern matching constraint are mapped to the generic constraint language as follows:
+
+\begin{gcotable}
+property & Enterprise & registryNumber & - & RegistryNumber & $\forall$ & - \\
+class & RegistryNumber & - & - & xsd:string & regex & 'NCC-1701([-][A-E])?' \\
+\end{gcotable}
+
+The \ms{Literal Pattern Matching} constraint introduces a new constraining element: \ms{regex}.
+For this new constraining element, an automatic validation must be implemented in SPIN.
+This has to be done once for each constraint which cannot be expressed in DL.
 
 \bibliography{../../literature/literature}{}
 \bibliographystyle{plain}
